@@ -685,8 +685,11 @@ mi_on_normal_stop_1 (struct bpstat *bs, int print_frame)
 	mi_uiout->field_signed ("core", core);
     }
   
-  fputs_unfiltered ("*stopped", mi->raw_stdout);
-  mi_out_put (mi_uiout, mi->raw_stdout);
+  if (!mi_suppress_notification.thread_state)
+    {
+      fputs_unfiltered ("*stopped", mi->raw_stdout);
+      mi_out_put (mi_uiout, mi->raw_stdout);
+    }
   mi_out_rewind (mi_uiout);
   mi_print_timing_maybe (mi->raw_stdout);
   fputs_unfiltered ("\n", mi->raw_stdout);
@@ -1012,19 +1015,23 @@ mi_on_resume_1 (struct mi_interp *mi,
      In future (MI3), we'll be outputting "^done" here.  */
   if (!running_result_record_printed && mi_proceeded)
     {
-      fprintf_unfiltered (mi->raw_stdout, "%s^running\n",
-			  current_token ? current_token : "");
+      if (!mi_suppress_notification.thread_state)
+	fprintf_unfiltered (mi->raw_stdout, "%s^running\n",
+			    current_token ? current_token : "");
     }
 
   /* Backwards compatibility.  If doing a wildcard resume and there's
      only one inferior, output "all", otherwise, output each resumed
      thread individually.  */
-  if ((ptid == minus_one_ptid || ptid.is_pid ())
-      && !multiple_inferiors_p ())
-    fprintf_unfiltered (mi->raw_stdout, "*running,thread-id=\"all\"\n");
-  else
-    for (thread_info *tp : all_non_exited_threads (targ, ptid))
-      mi_output_running (tp);
+  if (!mi_suppress_notification.thread_state)
+    {
+      if ((ptid == minus_one_ptid || ptid.is_pid ())
+	  && !multiple_inferiors_p ())
+	fprintf_unfiltered (mi->raw_stdout, "*running,thread-id=\"all\"\n");
+      else
+	for (thread_info *tp : all_non_exited_threads (targ, ptid))
+	  mi_output_running (tp);
+    }
 
   if (!running_result_record_printed && mi_proceeded)
     {
